<resources>
    <string name="app_name">Product Browser</string>

    <string name="menu_about">About</string>

    <string name="all_unknown">unknown</string>
    <string name="all_lorum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tristique quam ut metus porta congue. Proin in consectetur orci. Suspendisse varius nulla eget ante pretium hendrerit. Aliquam sollicitudin, turpis sed laoreet commodo, ipsum nulla efficitur quam, rhoncus rhoncus arcu arcu eu erat.</string>

    <string name="overview_numberOfItems">Number of items</string>
    <string name="overview_latestRetrieval">Latest retrieval</string>

    <string name="detail_name">Name</string>
    <string name="detail_category">Category</string>
    <string name="detail_remaining">Remaining</string>
    <string name="detail_description">Description</string>

    <string name="itemview_product_contentDescription">Product</string>

    <string name="about_createdBy">Created by David Hardy</string>
    <string name="about_website">http://www.endran.nl</string>
    <string name="about_actionLicenses">Third party licenses</string>
    <string name="about_versionInfo">Version %1$s</string>

    <string name="serverUrl" translatable="false">"https://gist.githubusercontent.com/anonymous/a3b3e50413fff111505a/raw/0522419f508e7ea506a8856586dce11a5664e9df/products.json"</string>

</resources>
